tests/fail/const_fn.stderr
error: cannot decorate const functions
  --> tests/fail/const_fn.rs:11:1
   |
11 | const fn constant_fn(x: i32) -> i32 {
   | ^^^^^

error: help: remove the `const` keyword or use a regular function
  --> tests/fail/const_fn.rs:11:1
   |
11 | const fn constant_fn(x: i32) -> i32 {
   | ^^^^^
